--- a/classes/Benelux/Stats/Group.html
+++ b/classes/Benelux/Stats/Group.html
@@ -47,16 +47,17 @@
             <ol>
               <li><a href="#M000065">+</a></li>
               <li><a href="#M000066">&lt;&lt;</a></li>
-              <li><a href="#M000078">[]</a></li>
-              <li><a href="#M000077">filter</a></li>
+              <li><a href="#M000079">[]</a></li>
+              <li><a href="#M000078">filter</a></li>
               <li><a href="#M000073">max</a></li>
               <li><a href="#M000071">mean</a></li>
               <li><a href="#M000067">merge</a></li>
               <li><a href="#M000072">min</a></li>
-              <li><a href="#M000076">n</a></li>
+              <li><a href="#M000077">n</a></li>
               <li><a href="#M000068">sample</a></li>
-              <li><a href="#M000075">sd</a></li>
-              <li><a href="#M000074">sum</a></li>
+              <li><a href="#M000076">sd</a></li>
+              <li><a href="#M000075">sum</a></li>
+              <li><a href="#M000074">sumsq</a></li>
               <li><a href="#M000069">tag_values</a></li>
               <li><a href="#M000070">tags</a></li>
             </ol>
@@ -110,29 +111,29 @@
                   <pre id='M000066-source'>    <span class="ruby-comment cmt"># File lib/benelux/stats.rb, line 76</span>&#x000A;76:       <span class="ruby-keyword kw">def</span> <span class="ruby-operator">&lt;&lt;</span>(<span class="ruby-identifier">other</span>)&#x000A;77:         <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">push</span> <span class="ruby-operator">*</span><span class="ruby-identifier">other</span>&#x000A;78:         <span class="ruby-keyword kw">self</span>&#x000A;79:       <span class="ruby-keyword kw">end</span></pre>
                 </div>
               </div>
-              <div class='method public-instance' id='method-M000078'>
-                <a name='M000078'>      </a>
+              <div class='method public-instance' id='method-M000079'>
+                <a name='M000079'>      </a>
                 <div class='synopsis'>
                   <span class='name'>[]</span>
                   <span class='arguments'>(*tags)</span>
                 </div>
                 <div class='description'>
                   <p>
-                  Alias for <a href="Group.html#M000077">filter</a>
+                  Alias for <a href="Group.html#M000078">filter</a>
                   </p>
                 </div>
               </div>
-              <div class='method public-instance' id='method-M000077'>
-                <a name='M000077'>      </a>
+              <div class='method public-instance' id='method-M000078'>
+                <a name='M000078'>      </a>
                 <div class='synopsis'>
                   <span class='name'>filter</span>
                   <span class='arguments'>(*tags)</span>
                 </div>
                 <div class='source'>
-                  <a class='source-toggle' href='#' onclick="toggleCode('M000077-source'); return false">
+                  <a class='source-toggle' href='#' onclick="toggleCode('M000078-source'); return false">
                     [show source]
                   </a>
-                  <pre id='M000077-source'>     <span class="ruby-comment cmt"># File lib/benelux/stats.rb, line 115</span>&#x000A;115:       <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">filter</span>(<span class="ruby-operator">*</span><span class="ruby-identifier">tags</span>)&#x000A;116:         (<span class="ruby-identifier">f</span> = <span class="ruby-keyword kw">super</span>).<span class="ruby-identifier">name</span> = <span class="ruby-ivar">@name</span>&#x000A;117:         <span class="ruby-identifier">f</span>&#x000A;118:       <span class="ruby-keyword kw">end</span></pre>
+                  <pre id='M000078-source'>     <span class="ruby-comment cmt"># File lib/benelux/stats.rb, line 116</span>&#x000A;116:       <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">filter</span>(<span class="ruby-operator">*</span><span class="ruby-identifier">tags</span>)&#x000A;117:         (<span class="ruby-identifier">f</span> = <span class="ruby-keyword kw">super</span>).<span class="ruby-identifier">name</span> = <span class="ruby-ivar">@name</span>&#x000A;118:         <span class="ruby-identifier">f</span>&#x000A;119:       <span class="ruby-keyword kw">end</span></pre>
                 </div>
               </div>
               <div class='method public-instance' id='method-M000073'>
@@ -187,17 +188,17 @@
                   <pre id='M000072-source'>     <span class="ruby-comment cmt"># File lib/benelux/stats.rb, line 109</span>&#x000A;109:       <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">min</span>()     <span class="ruby-identifier">merge</span>.<span class="ruby-identifier">min</span>    <span class="ruby-keyword kw">end</span></pre>
                 </div>
               </div>
-              <div class='method public-instance' id='method-M000076'>
-                <a name='M000076'>      </a>
+              <div class='method public-instance' id='method-M000077'>
+                <a name='M000077'>      </a>
                 <div class='synopsis'>
                   <span class='name'>n</span>
                   <span class='arguments'>()</span>
                 </div>
                 <div class='source'>
-                  <a class='source-toggle' href='#' onclick="toggleCode('M000076-source'); return false">
+                  <a class='source-toggle' href='#' onclick="toggleCode('M000077-source'); return false">
                     [show source]
                   </a>
-                  <pre id='M000076-source'>     <span class="ruby-comment cmt"># File lib/benelux/stats.rb, line 113</span>&#x000A;113:       <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">n</span>()       <span class="ruby-identifier">merge</span>.<span class="ruby-identifier">n</span>      <span class="ruby-keyword kw">end</span></pre>
+                  <pre id='M000077-source'>     <span class="ruby-comment cmt"># File lib/benelux/stats.rb, line 114</span>&#x000A;114:       <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">n</span>()       <span class="ruby-identifier">merge</span>.<span class="ruby-identifier">n</span>      <span class="ruby-keyword kw">end</span></pre>
                 </div>
               </div>
               <div class='method public-instance' id='method-M000068'>
@@ -213,30 +214,43 @@
                   <pre id='M000068-source'>     <span class="ruby-comment cmt"># File lib/benelux/stats.rb, line 93</span>&#x000A; 93:       <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">sample</span>(<span class="ruby-identifier">s</span>, <span class="ruby-identifier">tags</span>={})&#x000A; 94:         <span class="ruby-identifier">raise</span> <span class="ruby-constant">BeneluxError</span>, <span class="ruby-value str">&quot;tags must be a Hash&quot;</span> <span class="ruby-keyword kw">unless</span> <span class="ruby-constant">Hash</span> <span class="ruby-operator">===</span> <span class="ruby-identifier">tags</span>&#x000A; 95:         <span class="ruby-identifier">c</span> = <span class="ruby-constant">Calculator</span>.<span class="ruby-identifier">new</span>&#x000A; 96:         <span class="ruby-identifier">c</span>.<span class="ruby-identifier">add_tags</span> <span class="ruby-identifier">tags</span>&#x000A; 97:         <span class="ruby-identifier">c</span>.<span class="ruby-identifier">sample</span> <span class="ruby-identifier">s</span>&#x000A; 98:         <span class="ruby-keyword kw">self</span> <span class="ruby-operator">&lt;&lt;</span> <span class="ruby-identifier">c</span>&#x000A; 99:         <span class="ruby-keyword kw">nil</span>&#x000A;100:       <span class="ruby-keyword kw">end</span></pre>
                 </div>
               </div>
+              <div class='method public-instance' id='method-M000076'>
+                <a name='M000076'>      </a>
+                <div class='synopsis'>
+                  <span class='name'>sd</span>
+                  <span class='arguments'>()</span>
+                </div>
+                <div class='source'>
+                  <a class='source-toggle' href='#' onclick="toggleCode('M000076-source'); return false">
+                    [show source]
+                  </a>
+                  <pre id='M000076-source'>     <span class="ruby-comment cmt"># File lib/benelux/stats.rb, line 113</span>&#x000A;113:       <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">sd</span>()      <span class="ruby-identifier">merge</span>.<span class="ruby-identifier">sd</span>     <span class="ruby-keyword kw">end</span></pre>
+                </div>
+              </div>
               <div class='method public-instance' id='method-M000075'>
                 <a name='M000075'>      </a>
                 <div class='synopsis'>
-                  <span class='name'>sd</span>
+                  <span class='name'>sum</span>
                   <span class='arguments'>()</span>
                 </div>
                 <div class='source'>
                   <a class='source-toggle' href='#' onclick="toggleCode('M000075-source'); return false">
                     [show source]
                   </a>
-                  <pre id='M000075-source'>     <span class="ruby-comment cmt"># File lib/benelux/stats.rb, line 112</span>&#x000A;112:       <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">sd</span>()      <span class="ruby-identifier">merge</span>.<span class="ruby-identifier">sd</span>     <span class="ruby-keyword kw">end</span></pre>
+                  <pre id='M000075-source'>     <span class="ruby-comment cmt"># File lib/benelux/stats.rb, line 112</span>&#x000A;112:       <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">sum</span>()     <span class="ruby-identifier">merge</span>.<span class="ruby-identifier">sum</span>    <span class="ruby-keyword kw">end</span></pre>
                 </div>
               </div>
               <div class='method public-instance' id='method-M000074'>
                 <a name='M000074'>      </a>
                 <div class='synopsis'>
-                  <span class='name'>sum</span>
+                  <span class='name'>sumsq</span>
                   <span class='arguments'>()</span>
                 </div>
                 <div class='source'>
                   <a class='source-toggle' href='#' onclick="toggleCode('M000074-source'); return false">
                     [show source]
                   </a>
-                  <pre id='M000074-source'>     <span class="ruby-comment cmt"># File lib/benelux/stats.rb, line 111</span>&#x000A;111:       <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">sum</span>()     <span class="ruby-identifier">merge</span>.<span class="ruby-identifier">sum</span>    <span class="ruby-keyword kw">end</span></pre>
+                  <pre id='M000074-source'>     <span class="ruby-comment cmt"># File lib/benelux/stats.rb, line 111</span>&#x000A;111:       <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">sumsq</span>()   <span class="ruby-identifier">merge</span>.<span class="ruby-identifier">sumsq</span>  <span class="ruby-keyword kw">end</span></pre>
                 </div>
               </div>
               <div class='method public-instance' id='method-M000069'>
